# p1_rust_weather_forecast

./: Cargo.toml  Concepts.md  Extra_Challenges.md  README.md  Setup.md  oldmain.txt
src/: custom_error.rs  main.rs  requests.rs  weather.rs
