[package]
name = "p1_weather_forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
ureq = "*"
reqwest = {version = "*", features = ["blocking"]}
serde  = { version = "*", features = ["derive"] }
serde_json = "*"
clap = "*"
